--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,12 @@ description = "Cloud project"
 authors = ["Dimitrije Stojanov <mitadima@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-Django = "^3.2.9"
+python = "^3.7"
+Django = "^2.2"
 djangorestframework = "^3.12.4"
 markdown = "^3.*"
 django-filter = "^21.*"
-psycopg2-binary = "^2.9.*"
+mysql-connector-python = "8.0.27"
 
 [tool.poetry.dev-dependencies]
 
