--- a/project/pyproject.toml
+++ b/project/pyproject.toml
@@ -6,11 +6,11 @@ authors = ["Dimitrije Stojanov <mitadima@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-Django = "^2.2"
+Django = "^3.*"
 djangorestframework = "^3.12.4"
 markdown = "^3.*"
 django-filter = "^21.*"
-mysql-connector-python = "8.0.27"
+psycopg2-binary = "^2.9.*"
 
 [tool.poetry.dev-dependencies]
 
