--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: mitosHermanos
-          password: 021Empacher
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
