--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           push: true
           tags: stojanov98/cloud_computing:latecontext
-          file: ./project/Dockerfile
+          file: ../project/Dockerfile
           platform: linux/amd64
       -
         name: Image digest
