--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -29,9 +29,10 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: .
           push: true
           tags: stojanov98/cloud_computing:latecontext
-#           file: ../../project/Dockerfile
+          file: ./project/Dockerfile
           platform: linux/amd64
       -
         name: Image digest
