--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -29,7 +29,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: .
+#           context: .
           push: true
           tags: stojanov98/cloud_computing:latecontext
           file: ./project/Dockerfile
