--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -11,6 +11,6 @@ RUN apt update
 RUN pip install --upgrade pip
 COPY requirenments.txt .
 RUN pip install -r requirenments.txt 
-COPY /cloud_project .
+COPY . .
 
-CMD python manage.py makemigrations & python manage.py migrate & python manage.py runserver 0.0.0.0:8000
+CMD cd cloud_project & python manage.py makemigrations & python manage.py migrate & python manage.py runserver 0.0.0.0:8000
