--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -9,9 +9,12 @@ services:
         env_file: 
             - ../vagrant/vars.env
         depends_on: 
-            - postgres_db
+            - cloud_db1
         volumes: 
             - ./project/:/usr/src/project
+        environment: 
+            DB_HOST: "cloud_db1"
+            DB_NAME: "cloud_db1"
     django2:
         build: .
         restart: on-failure:10
@@ -20,19 +23,31 @@ services:
         env_file: 
             - ../vagrant/vars.env
         depends_on: 
-            - postgres_db
+            - cloud_db2
         volumes: 
             - ./project/:/usr/src/project
-    postgres_db:
+        environment: 
+            DB_HOST: "cloud_db2"
+            DB_NAME: "cloud_db2"
+    cloud_db1:
         image: postgres 
         volumes: 
-            - postgres_data:/var/lib/postgresql/data/
+            - postgres_data1:/var/lib/postgresql/data/
         restart: always
         environment: 
             - POSTGRES_USER=admin
             - POSTGRES_PASSWORD=admin
-            - POSTGRES_DB=cloud_db
-    
+            - POSTGRES_DB=cloud_db1
+    cloud_db2:
+        image: postgres 
+        volumes: 
+            - postgres_data2:/var/lib/postgresql/data/
+        restart: always
+        environment: 
+            - POSTGRES_USER=admin
+            - POSTGRES_PASSWORD=admin
+            - POSTGRES_DB=cloud_db2
         
 volumes: 
-    postgres_data: 
+    postgres_data1: 
+    postgres_data2:
