--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -6,7 +6,7 @@ RUN apt update
 
 RUN pip install --upgrade pip
 COPY . .
-RUN pip install -r .requirenments.txt 
+RUN pip install -r ./requirenments.txt 
 
 CMD cd cloud_project & python manage.py makemigrations & python manage.py migrate & python manage.py runserver 0.0.0.0:8000
 
