--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3.7"
 
 services: 
     django1:
-        build: .
+        # build: .
+        image: stojanov98/cloud_computing:latecontext
         restart: on-failure:10
         ports: 
             - "8000:8000"
@@ -15,8 +16,11 @@ services:
         environment: 
             DB_HOST: "cloud_db1"
             DB_NAME: "cloud_db1"
+        networks: 
+            - cloud_comuting_network
     django2:
-        build: .
+        # build: .
+        image: stojanov98/cloud_computing:latecontext
         restart: on-failure:10
         ports: 
             - "8001:8000"
@@ -29,6 +33,8 @@ services:
         environment: 
             DB_HOST: "cloud_db2"
             DB_NAME: "cloud_db2"
+        networks: 
+            - cloud_comuting_network
     cloud_db1:
         image: postgres 
         volumes: 
@@ -38,6 +44,10 @@ services:
             - POSTGRES_USER=admin
             - POSTGRES_PASSWORD=admin
             - POSTGRES_DB=cloud_db1
+        # ports: 
+        #     - "5435:5432"
+        networks: 
+            - cloud_comuting_network
     cloud_db2:
         image: postgres 
         volumes: 
@@ -47,7 +57,15 @@ services:
             - POSTGRES_USER=admin
             - POSTGRES_PASSWORD=admin
             - POSTGRES_DB=cloud_db2
+        # ports: 
+        #     - "5433:5432"
+        networks: 
+            - cloud_comuting_network
         
 volumes: 
     postgres_data1: 
     postgres_data2:
+
+networks: 
+    cloud_comuting_network:
+        driver: bridge
